Read image from DB && Custom pagination

--- a/Le_duong/Laravel/eCommerce/public/mix-manifest.json
+++ b/Le_duong/Laravel/eCommerce/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/css/bootstrap.css": "/css/bootstrap.css",
     "/css/flexslider.css": "/css/flexslider.css",
+    "/css/login.css": "/css/login.css",
     "/css/memenu.css": "/css/memenu.css",
     "/css/style.css": "/css/style.css",
     "/js/imagezoom.js": "/js/imagezoom.js",
