--- a/Le_duong/Laravel/eCommerce/public/mix-manifest.json
+++ b/Le_duong/Laravel/eCommerce/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/assets/css/main.css": "/assets/css/main.css",
+    "/assets/css/paginate.css": "/assets/css/paginate.css",
     "/assets/css/sb-admin.css": "/assets/css/sb-admin.css",
     "/assets/css/util.css": "/assets/css/util.css",
     "/assets/images/about-01.jpg": "/assets/images/about-01.jpg",
