module-handle-product

--- a/Le_duong/Laravel/eCommerce/public/mix-manifest.json
+++ b/Le_duong/Laravel/eCommerce/public/mix-manifest.json
@@ -69,6 +69,7 @@
     "/assets/images/thumb-01.jpg": "/assets/images/thumb-01.jpg",
     "/assets/images/thumb-02.jpg": "/assets/images/thumb-02.jpg",
     "/assets/images/thumb-03.jpg": "/assets/images/thumb-03.jpg",
+    "/assets/js/handle_modal.js": "/assets/js/handle_modal.js",
     "/assets/js/main.js": "/assets/js/main.js",
     "/assets/js/map-custom.js": "/assets/js/map-custom.js",
     "/assets/js/sb-admin-charts.js": "/assets/js/sb-admin-charts.js",
